New category settings WIP

--- a/applications/dashboard/scss/.scss-lint.yml
+++ b/applications/dashboard/scss/.scss-lint.yml
@@ -262,7 +262,7 @@ linters:
     exclude: legacy/**
 
   UnnecessaryParentReference:
-    enabled: true
+    enabled: false
     exclude: legacy/**
 
   UrlFormat:
